[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://music/music1.wav" type="AudioStream" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -2.01501, 86.0198, 0, 0, 0, 0, -0.573687, -90.754, 0, 0, 0, 0, 1032.85, -87.7578, 0, 0, 0, 0, 1028.53, 83.0237, 0, 0, 0, 0, 0.867639, 86.0198, 0, 0, 0, 0, -2.01501, 86.0198 )
}

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.855469, 0.317459, 0.317459, 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]

[node name="StartPosition" type="Node2D" parent="."]
position = Vector2( 506.059, 567.276 )

[node name="EnemyPath" type="Path2D" parent="."]
position = Vector2( 1.66178, -41.1391 )
scale = Vector2( 0.993513, 0.477935 )
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( 1023.96, 1.91258 )
rotation = 1.56711
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
